--- a/css/gomoku.css
+++ b/css/gomoku.css
@@ -13,8 +13,8 @@
 }
 
 body{
-  
   min-height: 100%;
+  height:100%;
   font-family: ambrosia; 
   text-align: center; 
 }
@@ -144,14 +144,21 @@ table td{
 }
 
 footer {
-  position: absolute; 
+  height:24px; 
   font-family: ambrosia;
-  bottom: 0; 
-  right: 0;
   font-size: 16px;
+  height:24px; // Replace with the height your footer should be
+  width: 100%; // Don't change
+  background-image: none;
+  background-repeat: repeat;
+  background-attachment: scroll;
+  background-position: 0% 0%;
+  position: fixed;
+  bottom: 0pt;
+  right: 0pt;
   margin-right:10px;
   margin-left:10px;
-}
+}  
 
 
 div {
